--- a/arch/arm/boot/dts/stm32mp157c-dk2-fx.dts
+++ b/arch/arm/boot/dts/stm32mp157c-dk2-fx.dts
@@ -22,6 +22,8 @@
 		serial1 = &usart3;
 		serial2 = &uart7;
 		serial3 = &usart2;
+		serial4 = &usart6;
+		serial5 = &uart5;
 	};
 
 	chosen {
@@ -88,6 +90,57 @@
 	};
 };
 
+&timers3 {
+	pwm {
+		status = "disabled";
+	};
+};
+
+&pinctrl {
+	usart3_pins_d: usart3-2 {
+		pins1 {
+			pinmux = <STM32_PINMUX('B', 10, AF7)>; /* USART3_TX */
+			bias-disable;
+			drive-push-pull;
+			slew-rate = <0>;
+		};
+		pins2 {
+			pinmux = <STM32_PINMUX('B', 12, AF8)>; /* USART3_RX */
+			bias-disable;
+		};
+	};
+
+	usart3_idle_pins_d: usart3-idle-2 {
+		pins1 {
+			pinmux = <STM32_PINMUX('B', 10, ANALOG)>; /* USART3_TX */
+		};
+		pins2 {
+			pinmux = <STM32_PINMUX('B', 12, AF8)>; /* USART3_RX */
+			bias-disable;
+		};
+	};
+
+	usart3_sleep_pins_d: usart3-sleep-2 {
+		pins {
+			pinmux = <STM32_PINMUX('B', 10, ANALOG)>, /* USART3_TX */
+				 <STM32_PINMUX('B', 12, ANALOG)>; /* USART3_RX */
+		};
+	};
+
+	usart6_pins: usart6 {
+		pins {
+			pinmux =	<STM32_PINMUX('C', 7, AF7)>, /* USART6_TX */
+					<STM32_PINMUX('C', 6, AF7)>; /* USART6_RX */
+		};
+	};
+	uart5_pins: uart5 {
+		pins {
+			pinmux =	<STM32_PINMUX('B', 13, AF14)>, /* UART5_TX */
+					<STM32_PINMUX('B', 5, AF12)>;  /* UART5_RX */
+		};
+	};
+};
+
 &usart2 {
 	pinctrl-names = "default", "sleep", "idle";
 	pinctrl-0 = <&usart2_pins_c>;
@@ -97,6 +150,11 @@
 };
 
 &usart3 {
+	pinctrl-names = "default", "sleep", "idle";
+	pinctrl-0 = <&usart3_pins_d>;
+	pinctrl-1 = <&usart3_sleep_pins_d>;
+	pinctrl-2 = <&usart3_idle_pins_d>;
+	/delete-property/uart-has-rtscts;
 	status = "okay";
 };
 
@@ -104,3 +162,14 @@
 	status = "okay";
 };
 
+&usart6 {
+	pinctrl-name = "default";
+	pinctrl-0 = <&usart6_pins>;
+	status = "okay";
+};
+
+&uart5 {
+	pinctrl-name = "default";
+	pinctrl-0 = <&uart5_pins>;
+	status = "okay";
+};
